Fix for delete post button overlap

--- a/styles/postslist.css
+++ b/styles/postslist.css
@@ -83,8 +83,7 @@
 
 .post-warning-button {
     width: 30%;
-    padding: 10px;
-    margin: 45px;
+    margin: 5%;
 }
 
 .post-warning-modal {
